<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterOyna">

    <EditText
        android:id="@+id/userName"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:background="@drawable/round_yellow"
        android:drawableStart="@drawable/ic_baseline24"
        android:ems="10"
        android:hint="User name"
        android:inputType="text|textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/pasword"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:background="@drawable/round_yellow"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/verify_code"
        android:inputType="numberPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwords1"
        app:layout_constraintVertical_bias="0.101" />

    <EditText
        android:id="@+id/phone12"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:background="@drawable/round_yellow"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:ems="10"
        android:hint="@string/_998_xxxxxxxxx"
        android:inputType="text|textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/passwords1"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:background="@drawable/round_yellow"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone12"
        app:layout_constraintVertical_bias="0.083" />

    <View
        android:id="@+id/view12"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/ic__"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view8"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/verbtn"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:text="@string/verify"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pasword"
        app:layout_constraintVertical_bias="0.083" />

    <View
        android:id="@+id/view8"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/ic_qale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/regbtn"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:background="@drawable/round_radius"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verbtn"
        app:layout_constraintVertical_bias="0.28" />

</androidx.constraintlayout.widget.ConstraintLayout>