<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qora"
    tools:context=".ui.forgotPassword">

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_yellow"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_yellow"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9"
        tools:ignore="RtlCompat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_radius"
        android:text="@string/to_send"
        android:textColor="#00cb17"
        android:textColorHint="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/round_yellow"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="16dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view18"
        tools:ignore="MissingConstraints,RtlCompat" />

    <View
        android:id="@+id/view26"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/ic__"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-8dp" />

    <View
        android:id="@+id/view18"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/ic_qale"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>